--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "An FCC Backend Challenge",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "dependencies": {
+    "cors": "^2.8.0",
     "express": "^4.12.4",
-    "cors": "^2.8.0"
+    "moment": "^2.30.1",
+    "nodemon": "^3.1.4"
   },
   "repository": {
     "type": "git",
